# Quant

./: .gitignore  hold.md  pyproject.toml
config/: settings.yaml  stocks.yaml
src/stock_analyzer/: __init__.py  cli.py  config.py  models.py
src/stock_analyzer/analysis/: action.py  llm_analyst.py  price_levels.py  scorer.py
src/stock_analyzer/data/: a_fetcher.py  etf_fetcher.py  fetcher.py  hk_fetcher.py  us_fetcher.py
src/stock_analyzer/indicators/: ema.py  kdj.py  macd.py
src/stock_analyzer/report/: generator.py  template.html
src/stock_analyzer/utils/: formatting.py
